test/errors/type/str/trim3.yasl
mt.lookup('', .trim)(.str, true)
